--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_DEV_API_BASE_URL=http://127.0.0.1:8000
 
 # Production URL
-VITE_PROD_API_BASE_URL=https://ewc-issuer.nieuwlaar.com
+VITE_PROD_API_BASE_URL=https://kvk-issuance-service.nieuwlaar.com
 
 # Current environment (set to 'development' or 'production')
 VITE_ENV=production 
